index.css
/* variables for the document */
:root {
    --site-blue: rgb(0, 49, 106);
    --site-flont: "Gill Sans", sans-serif;
    --mono-font: Monospaced, monospace;
    --semibold: 600;
}

/* the HTML document */
html, body {
    font-family: "Gill Sans", sans-serif;
    scroll-behavior: smooth;
    padding: 0;
    margin: 0;
}

/* the title of the site */
#site-title {
    color: var(--site-blue);
    padding: 1% 2.5%;
    font-weight: var(--semibold);
    font-family: var(--site-flont);
}

/* the big hello text for the site */
#site-hello {
    color: var(--site-blue);
    text-align: center;
    font-size: 5rem;
    margin: 0 auto;
    padding: 0;
    font-family: var(--mono-font);
}


/* the subtitle for the site */
.big-subheading {
    font-weight: normal;
    text-align: center;
    width: 95%;
    margin: 2% auto;
    font-size: 1.5rem;
}

/* make something monospaced font */
.mono-font {
    font-family: var(--mono-font);
}

/* the desktop set of images */
.desktop-set {
    display: none !important;
}

/* the mobile set of images */
.mobile-set {
    display: flex;
}

/* the flex container for columns within a section */
.column-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    margin: auto;
    padding: 0 1%;
}

/* a column within a section */
.column {
    margin: 0 auto 2.5% auto;
    text-align: center;
    position: relative;
    flex-basis: 95%;
}

/* when the site is larger than the minimum pixels */
@media (min-width: 700px) {

    /* the container for columns (nav) */
    .column-container {
        flex-wrap: nowrap;
        width: 85%;
        margin: auto;
    }

    /* the columns (in nav) */
    .column {
        margin-bottom: 0;
        padding: 1rem;
        text-align: center;
    }

    /* the site's subtitle */
    .big-subheading {
        width: 50%;
    }

    /* the desktop set of images */
    .desktop-set {
        display: flex !important;
    }

    /* the mobile set of images*/
    .mobile-set {
        display: none !important;
    }

    /* what happens to the image when the nav button is hovered*/
    .column:hover img {
        box-shadow: 5px 5px 10px black;
        transform: scale(1.05, 1.05) skew(-2deg);
        z-index: 0;
        transition: all 100ms ease-in-out;
    }

    /* what happens to the text when the nav option is hovered */
    .column:hover .nav-title {
        transform: translate(-50%, -50%) scale(1.2, 1.2) skew(-2deg);
        z-index: 1;
        transition: all 100ms ease-in-out;
    }

    /* the download file button when hovered */
    .file-button:hover {
        transform: scale(1.05, 1.05) skew(-3deg);
        transition: all 100ms ease-in-out;
        box-shadow: 3px 3px 5px gray;
    }
}

/* images */
img {
    max-width: 100%;
    border-radius: 3px;
    image-rendering: smooth;
    margin: auto;
    text-align: center;
}



/* the text for an option in the navigation */
.nav-title {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    color: white;
    font-weight: var(--semibold);
    margin: 0;
    padding: 0;
    width: 80%;
}

/* the top section of the site */
#top-section {
    height: 100vh;
}

/* a section of the site */
.site-section {
    width: 100%;
    padding: 1% 0;
    text-align: center;
    min-height: 100vh;
    vertical-align: center;
}

/* the header text for a section */
.section-header {
    font-weight: var(--semibold);
    text-align: center;
    font-size: 350%;
}

/* make text blue */
.blue-text {
    color: var(--site-blue);;
}

/* make text white */
.white-text {
    color: white;
}

/* make the background blue */
.blue-back {
   background-color: var(--site-blue);
}

/* make the background white */
.white-back {
    background-color: white;
}

/* links on the site */
a {
    color: inherit;
    text-decoration: inherit;
}

/* a button to download a file */
.file-button {
    font-weight: normal;
    border-radius: 3px;
    display: inline-block;
    padding: 2%;
    margin: 2%;
}

/* the invisible link (anchor) for a section */
.link-to {
    display: block;
    position: relative;
    top: 0;
    visibility: hidden;
}

.document-frame {
    max-width: 80%;
    height: 400px;
    display: block;
    margin: 2% auto;
}

/* define the animation for fading something in */
@keyframes fadeInAnimation {
    0% {
        opacity: 0;
        transform: scale(1.5);
    }
    100% {
        opacity: 1;
    }
}


#files {
    background-color: var(--site-blue);
    color: white;
}

.click-button {
    background-color: var(--site-blue);
}


/* play the typewriter animation */
.typewriter {
    animation: typewriter 1s steps(6) 0.5s 1 normal both,
    blinkTextCursor 0.5s steps(10) 7 normal;
    overflow: hidden;
    white-space: nowrap;
    border-right: 2px solid transparent;
}

/* the typewriter animation */
@keyframes typewriter {
    from{width: 0;}
    to{width: 18rem;}
}

/* the cursor blinking animation */
@keyframes blinkTextCursor {
    from{border-right: 2px solid var(--site-blue)}
    to{border-right: 2px solid transparent}
}

